welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: '<-' expected but ')' found.
for(i< - 1 to 6) {
               ^Program:15: error: illegal start of simple expression
}
^